# reverse-engine

./: .gitignore  Cargo.toml  PLAN.md  package.json  pnpm-workspace.yaml
.github/workflows/: release.yml
configs/: reverseng.config.toml
crates/reverseng-analyzer/: Cargo.toml
crates/reverseng-analyzer/src/: cache.rs  framework.rs  lib.rs
crates/reverseng-analyzer/src/extractors/: api_call.rs  component.rs  dependency.rs  function.rs  mod.rs  route.rs  state.rs
crates/reverseng-analyzer/src/parsers/: javascript.rs  mod.rs  python.rs  typescript.rs  vue.rs
crates/reverseng-analyzer/tests/: golden_test.rs
crates/reverseng-analyzer/tests/snapshots/: sample-react.json
crates/reverseng-cli/: Cargo.toml
crates/reverseng-cli/src/: main.rs
crates/reverseng-cli/src/commands/: analyze.rs  crawl.rs  full.rs  mod.rs  report.rs  test.rs  upgrade.rs
crates/reverseng-core/: Cargo.toml
crates/reverseng-core/src/: config.rs  ipc.rs
crates/reverseng-core/src/types/: analyzer.rs  crawler.rs  mapper.rs  mod.rs
crates/reverseng-mapper/: Cargo.toml
crates/reverseng-mapper/src/: cross_ref.rs  graph.rs  lib.rs
crates/reverseng-mapper/src/db/: schema.sql  sqlite.rs
crates/reverseng-upgrader/: Cargo.toml
crates/reverseng-upgrader/src/: audit.rs  dead_code.rs  impact.rs  lib.rs  version_diff.rs
node/crawler/: package.json
node/crawler/src/: auth-handler.ts  browser.ts  index.ts  network-interceptor.ts  page-scanner.ts  queue.ts  screenshot.ts  state-detector.ts
node/crawler/tests/: golden.test.ts
node/crawler/tests/fixtures/: about.html  dashboard.html  index.html  settings.html
node/docgen/: package.json
node/docgen/src/: cli-entry.ts  index.ts
node/docgen/src/excel/: workbook.ts
node/docgen/src/markdown/: generator.ts
node/docgen/src/mermaid/: flowchart.ts
node/testgen/: package.json
node/testgen/src/: cli-entry.ts  index.ts
node/testgen/src/generators/: api.ts  e2e.ts  flow.ts  visual.ts
npm-package/: README.md  package-lock.json  package.json  tsconfig.json
npm-package/output/: analysis.json
npm-package/output/reports/: component-graph.mmd  reverseng-report.xlsx
npm-package/output/tests/api/: endpoints.spec.ts
npm-package/output/tests/components/: Dashboard.spec.ts  Login.spec.ts  (+1 more)
npm-package/src/: index.ts  native.ts  types.ts
npm-package/src/analyzer/: framework.ts  index.ts
npm-package/src/cli/: index.ts
npm-package/src/crawler/: annotate.ts  derive-title.ts  index.ts  shell-detector.ts  visual-state.ts  wait-stable.ts
npm-package/src/docgen/: index.ts
npm-package/src/testgen/: index.ts
shared/schemas/: crawl-result.schema.json
test-fixtures/sample-react/: package.json
test-fixtures/sample-react/src/: App.tsx
(+20 files in other folders)
