[package]
name = "reverseng-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "reverseng"
path = "src/main.rs"

[dependencies]
reverseng-core.workspace = true
reverseng-analyzer.workspace = true
reverseng-mapper.workspace = true
reverseng-upgrader.workspace = true
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
colored.workspace = true
indicatif.workspace = true
