[package]
name = "reverseng-mapper"
version.workspace = true
edition.workspace = true

[dependencies]
reverseng-core.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
